decrease is done

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button id="phone-decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
                            <input id="phone-count" type="text" class="form-control text-center" value="1">
                            <button id="increase-mobile" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
@@ -43,7 +43,7 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button id="case-decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
                            <input id="case-count" type="text" class="form-control text-center" value="1">
                            <button id="case-increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
@@ -79,11 +79,19 @@
          document.getElementById('case-increase').addEventListener('click', function () {
             const caseInput = document.getElementById('case-count');
             const caseCount = parseInt(caseInput.value);
-            console.log(caseCount);
             const caseNewCount = caseCount + 1;
             caseInput.value = caseNewCount;
             const caseTotal = caseNewCount * 59;
             document.getElementById('case-total').innerText = '$' + caseTotal;
+         });
+         document.getElementById('case-decrease').addEventListener('click', function () {
+            const caseInput = document.getElementById('case-count');
+            const caseCount = parseInt(caseInput.value);
+            const caseNewCount = caseCount - 1;
+            caseInput.value = caseNewCount;
+            const caseTotal = caseNewCount * 59;
+            document.getElementById('case-total').innerText = '$' + caseTotal;
+
          })
       </script>
    </section>
