--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button id="phone-decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button onclick="handleProductChange('phone',false)" class="btn btn-default"><i
+                                 class="fas fa-minus"></i></button>
                            <input id="phone-count" type="text" class="form-control text-center" value="1">
-                           <button id="increase-mobile" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button onclick="handleProductChange('phone',true)" class="btn btn-default"><i
+                                 class="fas fa-plus"></i></button>
                         </div>
-                        <h5>$<span id="">1219</span></h5>
+                        <h5 id="phone-total">$1219</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
                      </div>
                   </div>
@@ -43,9 +45,11 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button id="case-decrease" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button onclick="handleProductChange('case',false)" class="btn btn-default"><i
+                                 class="fas fa-minus"></i></button>
                            <input id="case-count" type="text" class="form-control text-center" value="1">
-                           <button id="case-increase" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button onclick="handleProductChange('case',true)" class="btn btn-default"><i
+                                 class="fas fa-plus"></i></button>
                         </div>
                         <h5 id="case-total">$59</h5>
                         <img src="images/remove.png" alt="" class="remove-item">
@@ -63,9 +67,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5 id="total-price">$1,278</h5>
+                        <h5 id="tax-amount">$0</h5>
+                        <h5 id="grand-total">$1,278</h5>
                      </div>
                   </div>
                </div>
@@ -76,23 +80,98 @@
          </div>
       </div>
       <script>
-         document.getElementById('case-increase').addEventListener('click', function () {
-            const caseInput = document.getElementById('case-count');
-            const caseCount = parseInt(caseInput.value);
-            const caseNewCount = caseCount + 1;
-            caseInput.value = caseNewCount;
-            const caseTotal = caseNewCount * 59;
-            document.getElementById('case-total').innerText = '$' + caseTotal;
+         document.getElementById('phone-increase').addEventListener('click', function () {
+            handleProductPhone(true);
          });
-         document.getElementById('case-decrease').addEventListener('click', function () {
-            const caseInput = document.getElementById('case-count');
-            const caseCount = parseInt(caseInput.value);
-            const caseNewCount = caseCount - 1;
-            caseInput.value = caseNewCount;
-            const caseTotal = caseNewCount * 59;
-            document.getElementById('case-total').innerText = '$' + caseTotal;
-
+         document.getElementById('phone-decrease').addEventListener('click', function () {
+            handleProductPhone(false)
          })
+
+         function handleProductChange(product, isIncrease) {
+            const productInput = document.getElementById(product + '-count');
+            // const productCount = parseInt(productInput.value);
+            const productCount = getInputValue(product);
+            let productNewCount = productCount;
+            if (isIncrease == true) {
+               productNewCount = productCount + 1;
+            }
+            if (isIncrease == false && productCount > 0) (
+               productNewCount = productCount - 1
+            )
+            productInput.value = productNewCount;
+            let productTotal = 0;
+            if (product == 'phone') {
+               productTotal = productNewCount * 1219;
+            }
+            if (product == 'case') {
+               productTotal = productNewCount * 59;
+            }
+            //const caseTotal = productNewCount * 59;
+            document.getElementById(product + '-total').innerText = '$' + productTotal;
+            calculateTotal()
+         }
+         function calculateTotal() {
+            const phoneCount = getInputValue('phone');
+            const caseCount = getInputValue('case');
+
+            const totalPrice = phoneCount * 1219 + caseCount * 59;
+            document.getElementById('total-price').innerText = "$" + totalPrice;
+
+            const tax = Math.round(totalPrice * 0.1);
+            document.getElementById('tax-amount').innerText = "$" + tax;
+
+            const grandTotal = totalPrice + tax;
+            document.getElementById('grand-total').innerText = "$" + grandTotal;
+         }
+         function getInputValue(product) {
+            const productInput = document.getElementById(product + '-count');
+            const productCount = parseInt(productInput.value);
+            return productCount;
+         }
+         // function handleProductPhone(isIncrease) {
+         //    const phoneInput = document.getElementById('phone-count');
+         //    const phoneCount = parseInt(phoneInput.value);
+         //    //const phoneNewCount = phoneCount - 1;
+         //    if (isIncrease == true) {
+         //       phoneNewCount = phoneCount + 1;
+         //    }
+         //    if (isIncrease == false && phoneCount > 0) {
+         //       phoneNewCount = phoneCount - 1;
+         //    }
+         //    phoneInput.value = phoneNewCount;
+         //    const phoneTotal = phoneNewCount * 1219;
+         //    document.getElementById('phone-total').innerText = "$" + phoneTotal;
+         //    calculateTotal()
+         // }
+
+         // function handleProductChange(isIncrease) {
+         //    const caseInput = document.getElementById('case-count');
+         //    const caseCount = parseInt(caseInput.value);
+         //    let caseNewCount = caseCount;
+         //    if (isIncrease == true) {
+         //       caseNewCount = caseCount + 1;
+         //    }
+         //    if (isIncrease == false && caseCount > 0) (
+         //       caseNewCount = caseCount - 1
+         //    )
+         //    caseInput.value = caseNewCount;
+         //    const caseTotal = caseNewCount * 59;
+         //    document.getElementById('case-total').innerText = '$' + caseTotal;
+         //    calculateTotal()
+         // }
+
+         // function calculateTotal() {
+         //    const phoneCount = getInputValue('product');
+         //    const caseCount = getInputValue('case');
+
+         //    const totalPrice = phoneCount * 1219 + caseCount * 59;
+         //    document.getElementById('total-price').innerText = "$" + totalPrice;
+         // }
+         // function getInputValue(product) {
+         //    const productInput = document.getElementById(product + '-count');
+         //    const productCount = parseInt(productInput.value);
+         //    return productCount;
+         // }
       </script>
    </section>
 </body>
